# aevascenes

./: .gitignore  CITATION.md  LICENSE-CODE  LICENSE-DATASET  LICENSE_CODE.md  README.md  download_dataset.sh  environment.yml  format.sh  pyproject.toml
aevascenes/: __init__.py  aevascenes.py  configs.py
aevascenes/metadata/: aevascenes_v2_metadata.json
aevascenes/utils/: __init__.py  colormaps.py  utils.py
aevascenes/visualizer/: __init__.py  visualizer.py
docs/: Dataset.md  Getting_Started.md
examples/: visualize_aevascenes.py
metadata/: scene_info.json
scripts/: download_dataset.sh
