[project]
name = "aevascenes"
version = "0.1.0"
description = "AevaScenes Python SDK"
authors = [{name = "Aeva, Inc", email = "research@aeva.ai"}]
license = {file = "LICENSE-CODE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tqdm",
    "numpy",
    "pandas",
    "transformations",
    "pyyaml",
    "tabulate",
    "matplotlib",
    "pillow",
    "scipy",
    "opencv-python",
    "rich",
]
keywords = ["aeva", "aevascenes", "lidar", "fmcw", "sdk"]
# See https://pypi.org/classifiers
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
